@@ -106,8 +106,41 @@ function media_upload_nextgen_form($errors) {
 	// Get the images
 	if ( $galleryID != 0 )
 		$picarray = $wpdb->get_col("SELECT pid FROM $wpdb->nggpictures WHERE galleryid = '$galleryID' AND exclude != 1 ORDER BY {$ngg->options['galSort']} {$ngg->options['galSortDir']} LIMIT $start, 10 ");	
+
+	// WP-Core code for Post-thumbnail
+	$calling_post_id = 0;
+	if ( isset( $_GET['post_id'] ) )
+		$calling_post_id = $_GET['post_id'];
 		
 ?>
+
+<script type="text/javascript"> 
+<!--
+	function NGGSetAsThumbnail(id){
+		var $link = jQuery('a#ngg-post-thumbnail-' + id);
+	
+		$link.text( setPostThumbnailL10n.saving );
+		jQuery.post(ajaxurl, {
+			action:"ngg_set_post_thumbnail", post_id: post_id, thumbnail_id: id, cookie: encodeURIComponent(document.cookie)
+		}, function(str){
+			var win = window.dialogArguments || opener || parent || top;
+			$link.text( setPostThumbnailL10n.setThumbnail );
+			if ( str == '0' ) {
+				alert( setPostThumbnailL10n.error );
+			} else {
+				jQuery('a.ngg-post-thumbnail').show();
+				$link.text( setPostThumbnailL10n.done );
+				$link.fadeOut( 2000 );
+				// set some parameter ???
+				win.WPSetThumbnailID(id);
+				// replace the meta box with the image
+				win.WPSetThumbnailHTML(str);
+			}
+		}
+		);
+	}
+//-->
+</script>
 
 <form id="filter" action="" method="get">
 <input type="hidden" name="type" value="<?php echo esc_attr( $GLOBALS['type'] ); ?>" />
@@ -165,7 +198,7 @@ function media_upload_nextgen_form($errors) {
 	
 	<div id="media-items">
 	<?php
-	if(is_array($picarray)) {
+	if( is_array($picarray) ) {
 		foreach ($picarray as $picid) {
 			//TODO:Reduce SQL Queries
 			$picture = nggdb::find_image($picid);
@@ -184,36 +217,36 @@ function media_upload_nextgen_form($errors) {
 				  <tr><td><?php echo esc_attr( stripslashes($picture->alttext) ); ?></td></tr>
 				  <tr><td>&nbsp;</td></tr>
 				  <tr>
-					<td class="label"><label for="image[<?php echo $picid ?>][alttext]"><?php esc_attr( _e('Alt/Title text', "nggallery") );?></label></td>
-					<td class="field"><input id="image[<?php echo $picid ?>][alttext]" name="image[<?php echo $picid ?>][alttext]" value="<?php echo esc_attr( stripslashes($picture->alttext) ); ?>" type="text"/></td>
+					<td class="label"><label for="image[<?php echo $picid ?>][alttext]"><?php esc_attr_e('Alt/Title text', "nggallery") ;?></label></td>
+					<td class="field"><input id="image[<?php echo $picid ?>][alttext]" name="image[<?php echo $picid ?>][alttext]" value="<?php esc_attr_e( stripslashes($picture->alttext) ); ?>" type="text"/></td>
 				  </tr>	
 				  <tr>
-					<td class="label"><label for="image[<?php echo $picid ?>][description]"><?php esc_attr( _e("Description","nggallery") ); ?></label></td>
-						<td class="field"><textarea name="image[<?php echo $picid ?>][description]" id="image[<?php echo $picid ?>][description]"><?php echo esc_attr( stripslashes($picture->description) ); ?></textarea></td>
+					<td class="label"><label for="image[<?php echo $picid ?>][description]"><?php esc_attr_e("Description","nggallery") ; ?></label></td>
+						<td class="field"><textarea name="image[<?php echo $picid ?>][description]" id="image[<?php echo $picid ?>][description]"><?php esc_attr_e( stripslashes($picture->description) ); ?></textarea></td>
 				  </tr>
 					<tr class="align">
-						<td class="label"><label for="image[<?php echo $picid ?>][align]"><?php esc_attr( _e("Alignment") ); ?></label></td>
+						<td class="label"><label for="image[<?php echo $picid ?>][align]"><?php esc_attr_e("Alignment"); ?></label></td>
 						<td class="field">
 							<input name="image[<?php echo $picid ?>][align]" id="image-align-none-<?php echo $picid ?>" checked="checked" value="none" type="radio" />
-							<label for="image-align-none-<?php echo $picid ?>" class="align image-align-none-label"><?php esc_attr( _e("None") );?></label>
+							<label for="image-align-none-<?php echo $picid ?>" class="align image-align-none-label"><?php esc_attr_e("None") ;?></label>
 							<input name="image[<?php echo $picid ?>][align]" id="image-align-left-<?php echo $picid ?>" value="left" type="radio" />
-							<label for="image-align-left-<?php echo $picid ?>" class="align image-align-left-label"><?php esc_attr(  _e("Left") );?></label>
+							<label for="image-align-left-<?php echo $picid ?>" class="align image-align-left-label"><?php esc_attr_e("Left") ;?></label>
 							<input name="image[<?php echo $picid ?>][align]" id="image-align-center-<?php echo $picid ?>" value="center" type="radio" />
-							<label for="image-align-center-<?php echo $picid ?>" class="align image-align-center-label"><?php esc_attr( _e("Center") );?></label>
+							<label for="image-align-center-<?php echo $picid ?>" class="align image-align-center-label"><?php esc_attr_e("Center") ;?></label>
 							<input name="image[<?php echo $picid ?>][align]" id="image-align-right-<?php echo $picid ?>" value="right" type="radio" />
-							<label for="image-align-right-<?php echo $picid ?>" class="align image-align-right-label"><?php esc_attr( _e("Right") );?></label>
+							<label for="image-align-right-<?php echo $picid ?>" class="align image-align-right-label"><?php esc_attr_e("Right") ;?></label>
 						</td>
 					</tr>
 					<tr class="image-size">
-						<th class="label"><label for="image[<?php echo $picid ?>][size]"><span class="alignleft"><?php esc_attr( _e("Size") ); ?></span></label>
+						<th class="label"><label for="image[<?php echo $picid ?>][size]"><span class="alignleft"><?php esc_attr_e("Size") ; ?></span></label>
 						</th>
 						<td class="field">
 							<input name="image[<?php echo $picid ?>][size]" id="image-size-thumb-<?php echo $picid ?>" type="radio" checked="checked" value="thumbnail" />
-							<label for="image-size-thumb-<?php echo $picid ?>"><?php esc_attr( _e("Thumbnail") ); ?></label>
+							<label for="image-size-thumb-<?php echo $picid ?>"><?php esc_attr_e("Thumbnail") ; ?></label>
 							<input name="image[<?php echo $picid ?>][size]" id="image-size-full-<?php echo $picid ?>" type="radio" value="full" />
-							<label for="image-size-full-<?php echo $picid ?>"><?php esc_attr( _e("Full size") ); ?></label>
+							<label for="image-size-full-<?php echo $picid ?>"><?php esc_attr_e("Full size") ; ?></label>
 							<input name="image[<?php echo $picid ?>][size]" id="image-size-singlepic-<?php echo $picid ?>" type="radio" value="singlepic" />
-							<label for="image-size-singlepic-<?php echo $picid ?>"><?php esc_attr( _e("Singlepic", "nggallery") ); ?></label>
+							<label for="image-size-singlepic-<?php echo $picid ?>"><?php esc_attr_e("Singlepic", "nggallery") ; ?></label>
 						</td>
 					</tr>
 				   <tr class="submit">
@@ -221,7 +254,13 @@ function media_upload_nextgen_form($errors) {
 							<input type="hidden"  name="image[<?php echo $picid ?>][thumb]" value="<?php echo $picture->thumbURL ?>" />
 							<input type="hidden"  name="image[<?php echo $picid ?>][url]" value="<?php echo $picture->imageURL ?>" />
 						</td>
-						<td class="savesend"><button type="submit" class="button" value="1" name="send[<?php echo $picid ?>]"><?php echo esc_attr( __('Insert into Post') ); ?></button></td>
+						<td class="savesend">
+							<?php
+							if ( $calling_post_id && current_theme_supports( 'post-thumbnails', get_post_type( $calling_post_id ) ) )
+								echo "<a class='ngg-post-thumbnail' id='ngg-post-thumbnail-" . $picid . "' href='#' onclick='NGGSetAsThumbnail(\"$picid\");return false;'>" . esc_html__( 'Use as thumbnail' ) . "</a>";
+							?>
+							<button type="submit" class="button" value="1" name="send[<?php echo $picid ?>]"><?php esc_html_e( 'Insert into Post' ); ?></button>
+						</td>
 				   </tr>
 			  </tbody></table>
 			</div>
